# LLVM-AMDGPU-Assembler-Extra-glog-fork

./: CMakeLists.txt  README.md
.glog/: glog-scan.sarif
amdphdrs/: CMakeLists.txt  amdphdrs.c
examples/: CMakeLists.txt
examples/api/: CMakeLists.txt
examples/api/assemble/: CMakeLists.txt  assemble.cpp
examples/api/disassemble/: CMakeLists.txt  disassemble.cpp
examples/asm-kernel/: CMakeLists.txt  asm-kernel.cpp  asm-kernel.s
examples/common/: CMakeLists.txt  dispatch.cpp  dispatch.hpp  half.cpp
examples/gfx8/: CMakeLists.txt  debug.inc  dpp_reduce.cpp  dpp_reduce.s  ds_bpermute.cpp  ds_bpermute.s  fp16_native.cpp  fp16_native.s  fp16_storage.cpp  fp16_storage.s  gds_test.s  gpr_alloc.inc  s_memrealtime.cpp  s_memrealtime.s  s_memrealtime_inline.cl  s_memrealtime_inline.cpp
examples/sp3/: CMakeLists.txt  for.sp3  function.sp3  if.sp3
